Archive2/1b/30c60f74a4c393/output
main.cpp:3:21: warning: unused parameter 'y' [-Wunused-parameter]
void f(unsigned int y) { }
                    ^
main.cpp:4:41: error: static_assert failed "STATIC CASTED!"
template<typename T> void f(T const&) { static_assert(0, "STATIC CASTED!"); }
                                        ^             ~
1 warning and 1 error generated.
